# python

./: Dockerfile  README.md  requirements.txt
app/: main.py
devops-demo-api_1/devops-demo-api/: .dockerignore  pyproject.toml  requirements-dev.txt
devops-demo-api_1/devops-demo-api/.github/workflows/: ci.yml
devops-demo-api_1/devops-demo-api/argocd/: application.yaml
devops-demo-api_1/devops-demo-api/gitops/base/: deployment.yaml  servicemonitor.yaml
devops-demo-api_1/devops-demo-api/gitops/overlays/prod/: kustomization.yaml
devops-demo-api_1/devops-demo-api/tests/: test_main.py
gitops/base/: service.yaml
observability/: README.md
