[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-demo-api"
version = "0.1.0"
description = "Reference FastAPI service for an end-to-end GitOps CI/CD demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-fastapi-instrumentator",
    "python-json-logger",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
